cmake_minimum_required(VERSION 3.16)
project(MidnightDrive)
list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_LIST_DIR})
set(CMAKE_CXX_STANDARD 14)
include_directories(${PROJECT_SOURCE_DIR})
file(GLOB SRC_FILES ${PROJECT_SOURCE_DIR}/*.cpp)
find_package(SFML 2.5 COMPONENTS SFML::system SFML::window SFML::network SFML::graphics SFML::audio)
add_executable(MidnightDrive ${SRC_FILES})
add_library(Exception_library STATIC FileNotFound.cpp FileNotFound.h)
target_link_libraries(MidnightDrive sfml-graphics sfml-window sfml-system sfml-audio ${EXCEPTION_LIBRARY})
